# CVonC-forVideo

./: README.md
TestCV/: CMakeLists.txt  TestCV.cpp
